Resolve #12139 Fix long URL overflow in page partial
  * Truncate long URLs in page partial
  * Add JS toggle to display full/truncated URL
  * Add category association in Page factory
  * Add factory for page with long URL
  * Update styling/layout of page partial
  * Update tests for page partial

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,3 +18,27 @@ body.pages {
     }
   }
 }
+
+.page.media {
+  display: table;
+  max-width: 1000px;
+  white-space: nowrap;
+
+  .favicon-container {
+    display: table-cell;
+    min-width: 24px;
+  }
+
+  .media-body {
+    display: table-cell;
+
+    p.truncated-url {
+      cursor: zoom-in;
+    }
+
+    p.full-url {
+      cursor: zoom-out;
+      display: none;
+    }
+  }
+}
